--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dexie-react-hooks": "^1.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-lottie-player": "^2.1.0",
     "react-router": "^7.2.0",
     "tailwindcss": "^4.0.9",
     "zod": "^3.24.2"
