--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
-    "dexie": "^4.0.11",
-    "dexie-react-hooks": "^1.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-lottie-player": "^2.1.0",
     "react-router": "^7.2.0",
+    "react-share": "^5.2.2",
     "tailwindcss": "^4.0.9",
     "zod": "^3.24.2"
   },
