--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build": "tsc -b && vite build",
     "deploy": "wrangler pages deploy dist",
     "lint": "eslint --fix --ignore-pattern .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "eslint": "eslint --fix --ignore-pattern .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "preview": "vite preview",
-    "format": "prettier --write \"**/*.{ts,tsx,cjs,mjs,json,html,css,js,jsx}\" --cache --config prettier.config.mjs"
+    "prettier": "prettier --write \"**/*.{ts,tsx,cjs,mjs,json,html,css,js,jsx}\" --cache --config prettier.config.mjs"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
@@ -38,7 +39,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.15.0",
-    "prettier": "^3.5.2",
+    "prettier": "^3.5.3",
     "prettier-plugin-classnames": "^0.7.7",
     "prettier-plugin-css-order": "^2.1.2",
     "typescript": "~5.7.2",
