--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,6 @@ dist-ssr
 *.local
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
@@ -24,7 +22,7 @@ dist-ssr
 node_modules/
 Thumbs.db
 .idea/
-.vscode/
+.cursor
 *.sublime-project
 *.sublime-workspace
 yarn.lock
